@@ -237,48 +237,6 @@ namespace GtkSharp.Generation {
 			}
 		}
 
-		void GenerateInterface (GenerationInfo gen_info)
-		{
-			StreamWriter sw = gen_info.Writer = gen_info.OpenStream (Name);
-
-			sw.WriteLine ("namespace " + NS + " {");
-			sw.WriteLine ();
-			sw.WriteLine ("\tusing System;");
-			sw.WriteLine ();
-			sw.WriteLine ("#region Autogenerated code");
-			sw.WriteLine ("\tpublic interface " + Name + " : GLib.GInterface {");
-
-			GenSignals (gen_info);
-			GenMethodDecls (sw, GenVMDecls (sw));
-
-			AppendCustom (sw, gen_info.CustomDir);
-
-			sw.WriteLine ("\t}");
-			sw.WriteLine ("#endregion");
-			sw.WriteLine ("}");
-			sw.Close ();
-			gen_info.Writer = null;
-			Statistics.IFaceCount++;
-		}
-
-#if false
-		public void GenerateNotQuiteReadyYet (GenerationInfo gen_info)
-		{
-			ArrayList tmp = new ArrayList ();
-			foreach (VirtualMethod vm in vms) {
-				if (vm.IsValid)
-					tmp.Add (vm);
-				else {
-					members.Remove (vm);
-					Console.WriteLine ("of interface " + QualifiedName);
-				}
-			}
-			vms = tmp;
-			GenerateAdapter (gen_info);
-			GenerateInterface (gen_info);
-		}
-#endif
-
 		public override void Generate (GenerationInfo gen_info)
 		{
 			GenerateAdapter (gen_info);
