@@ -1,5 +1,10 @@
 2007-09-19  Mike Kestner  <mkestner@novell.com>
 
+	* generator/InterfaceGen.cs: remove some dead code from a previous
+	implementation attempt.
+
+2007-09-19  Mike Kestner  <mkestner@novell.com>
+
 	* generator/VirtualMethod.cs: refactor delegate generation into
 	GenerateCallback and add [CDeclCallback] which was missing.
 	* generator/InterfaceGen.cs: kill GenerateDelegates.  They are now
